# django-passkey-using-fido2

./: .coveragerc  .gitignore  README.md  compose.yaml  helper.sh  manage.py
configure_passkey/: settings.py  urls.py
docker/: Dockerfile  pyproject.toml
example/: README.md
example/config/: settings.py  urls.py
example/sample_app/: admin.py  models.py  urls.py  views.py
example/sample_app/migrations/: 0001_initial.py  0002_insert_default_users.py
example/templates/: base.html
example/templates/sample_app/: index.html
passkey/: __init__.py  admin.py  apps.py  backends.py  forms.py  models.py  urls.py  views.py
passkey/migrations/: 0001_initial.py
passkey/static/passkey/js/: passkey_api.js
passkey/templates/passkey/: login.html  passkey_base.html  passkey_list.html
passkey/tests/: __init__.py  conftest.py  factories.py  test_backends.py  test_forms.py  test_models.py  test_views.py
